<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutus_title">About Us</string>
    <string name="account_locked">Account Locked</string>
    <string name="account_suspended">Account Suspended</string>
    <string name="account_title">Account</string>
    <string name="add_group_hint">Who do you want to add?</string>
    <string name="adding_to_convo_fail_message">Adding to conversation failed. Please try again</string>
    <string name="admins">Admins</string>
    <string name="anon_match_add_friend_dialog_description">"Your profile will only be revealed if both of you agree to become friends

Becoming friends allows you to send and receive photos and videos"</string>
    <string name="anon_match_add_friend_dialog_title">Heads Up!</string>
    <string name="anonmatch_challenge_completed_description">"You're on a roll! You've successfully completed the chat challenge to earn the Big Prize"</string>
    <string name="anonmatch_challenge_completed_title">Congratulations!</string>
    <string name="anonmatch_kin_intro_description">Earn Kin by completing daily challeneges and spend it on chats, themes and more!</string>
    <string name="anonmatch_kin_intro_title">Use Kin to Buy Chats</string>
    <string name="anonmatch_transaction_failed_description">Your purchase could not be completed. Please try again, or cancel to discard the transaction.</string>
    <string name="anonmatch_transaction_failed_title">Transaction Failed</string>
    <string name="anonymous_rate_chat_thank_you">Thanks for helping make Kik better</string>
    <string name="app_name">Kik X</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_sure_unban_user">%1$s will be removed from the banned list and can rejoin the conversation through an invitation</string>
    <string name="are_typing_">are typing...</string>
    <string name="are_you_sure_you_want_to_clear_your_ignored_messages">Are you sure you want to clear these chats?</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="backup_kin_wallet">Backup Kin wallet</string>
    <string name="balance">Balance</string>
    <string name="ban_x_from_group_dialog_body">%s will be unable to message this group and will be unable to join until they have been unbanned</string>
    <string name="ban_x_from_group_dialog_title">Ban %s?</string>
    <string name="banned">Banned</string>
    <string name="be_nice_description">Keep it PG-13. Our &lt;a href=\"https://www.kik.com/standards/\">Community Standards&lt;/a> are in effect</string>
    <string name="birthday_invalid_less_than_six">Please enter a valid birthday</string>
    <string name="birthday_invalid_less_than_thirteen">Sorry, you are not eligible to create an account.</string>
    <string name="birthday_invalid_missing_date">Please enter your birthday</string>
    <string name="block_x">Block %s</string>
    <string name="blocklist_empty_name">Name</string>
    <string name="blocklist_title">Block List</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browser_options_copylink">Copy Link</string>
    <string name="browser_options_opennative">Open in Native Browser</string>
    <string name="browser_options_reload">Reload</string>
    <string name="browser_options_shareviakik">Share Via Kik</string>
    <string name="button_ban">Ban</string>
    <string name="button_delete">Delete</string>
    <string name="button_end">End</string>
    <string name="button_leave">Leave</string>
    <string name="button_ok">OK</string>
    <string name="button_promote">Promote</string>
    <string name="button_remove">Remove</string>
    <string name="button_retry">Retry</string>
    <string name="button_unblock">Unblock</string>
    <string name="buy_theme">Buy Theme</string>
    <string name="camera_error_message">Close other apps using the camera and try again</string>
    <string name="camera_error_title">Could not connect to camera!</string>
    <string name="camera_media_send">Send</string>
    <string name="cant_create_group_too_many_groups_body">"You can't create more than three public groups a day! Please wait a while and try again"</string>
    <string name="change_chat_bubble_color_summary">Change chat bubble color</string>
    <string name="change_group_name_error_name_restricted_body">Your group name contains restricted terms. Please update your group name and try again</string>
    <string name="change_group_name_error_name_restricted_title">Invalid Group Name</string>
    <string name="change_group_name_error_not_permitted">You are not authorized to make this change</string>
    <string name="change_group_name_hint">Name Your Group</string>
    <string name="change_group_name_title">Group Name</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_anonymously_description">Chat anonymously before you decide to reveal your profile</string>
    <string name="clear_conversations">Clear Chats</string>
    <string name="close_kik">Close Kik</string>
    <string name="daily_kin_reward_error_description">Unable to claim Daily Kin Reward. Hit retry to try again!</string>
    <string name="daily_kin_reward_error_title">Something Went Wrong</string>
    <string name="day_abbreviation">d</string>
    <string name="delete_message_confirmation_dialog_title">Delete Message?</string>
    <string name="emoji_status_back_dialog_description">This will discard the current emoji status you have selected</string>
    <string name="error_failed_to_restore_kin_wallet">Failed to restore your wallet. Please try again.</string>
    <string name="home_mute_notifications_option_1_hr">For 1 hour</string>
    <string name="home_mute_notifications_option_8_am">Until 8:00am</string>
    <string name="home_mute_notifications_option_for_30_seconds">For 30 seconds</string>
    <string name="home_mute_notifications_option_forever">Forever</string>
    <string name="hour_abbreviation">h</string>
    <string name="interestspicker_retryconnection_body">Check your network connection and please try again</string>
    <string name="interestspicker_retryconnection_title">Network Error</string>
    <string name="leave_chat_dialog_body">Are you sure you want to leave this chat?</string>
    <string name="leave_chat_dialog_title">Leave Chat</string>
    <string name="maximum_chats_per_day_reached">You have reached the maximum number of chats allowed per day</string>
    <string name="meet_new_people_temp_ban_timer_text">You can continue chatting in</string>
    <string name="minute_abbreviation">m</string>
    <string name="mute_notifications_dialog_title">Turn off all notifications for this chat</string>
    <string name="never">Never</string>
    <string name="not_now_caps">NOT NOW</string>
    <string name="ok">OK</string>
    <string name="preference_developer_text_dialog">This mode is intended for developers of Kik-optimized webpages</string>
    <string name="preference_developer_title_dialog">Enable Developer Mode?</string>
    <string name="save">Save</string>
    <string name="second_abbreviation">s</string>
    <string name="settings_auto_download_videos">Auto Download Videos</string>
    <string name="settings_share_username">Share Your Username</string>
    <string name="settings_theme">Change Theme</string>
    <string name="settings_theme_dark">Dark Mode</string>
    <string name="settings_theme_light">Light Mode</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="themes_discard_subtitle">This will discard the theme you have selected</string>
    <string name="themes_discard_title">Are You Sure?</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="title_are_you_sure">Are You Sure?</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_chat_limit_reached">Chat Limit Reached</string>
    <string name="title_choose_existing">Choose Existing</string>
    <string name="title_copy">Copy</string>
    <string name="title_delete">Delete</string>
    <string name="title_discard">Discard</string>
    <string name="title_kik_username">Your Kik Username</string>
    <string name="title_no">No</string>
    <string name="title_not_now">Not now</string>
    <string name="title_profile_picture">Profile Picture</string>
    <string name="title_settings">Settings</string>
    <string name="title_start">Start</string>
    <string name="title_start_a_group">Start a Group</string>
    <string name="title_take_picture">Take Picture</string>
    <string name="title_video_chat_access">Video Chat Access</string>
    <string name="title_view_photo">View Photo</string>
    <string name="title_yes">Yes</string>
    <string name="video_chat_permissions_instructions">Kik needs access to your camera and microphone. Go to Settings > Permissions > Turn Camera and Microphone On</string>
    <string name="wifi_and_cellular">Wi-Fi and Cellular</string>
    <string name="wifi_only">Wi-Fi Only</string>
</resources>