<?xml version="1.0" encoding="utf-8"?>
<com.kik.design.StandardDialog android:tag="layout/dialog_anonmatch_chatlimit_0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:drawable="@drawable/find_friends" app:subtitleText="@string/maximum_chats_per_day_reached" app:titleText="@string/title_chat_limit_reached"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:background="@color/gray_2" android:layout_width="fill_parent" android:layout_height="@dimen/half_dp" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" />
    <com.kik.design.SimpleTextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" app:text="@string/meet_new_people_temp_ban_timer_text" app:textColor="@color/gray_6" app:textSize="16.0sp" />
    <com.kik.design.LargeCountdownTimerView android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:dayAbbreviation="@string/day_abbreviation" app:hourAbbreviation="@string/hour_abbreviation" app:minuteAbbreviation="@string/minute_abbreviation" app:secondAbbreviation="@string/second_abbreviation" app:textColor="?kik_blue" />
    <com.kik.design.BorderlessButton android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_ok" />
</com.kik.design.StandardDialog>