<?xml version="1.0" encoding="utf-8"?>
<com.kik.design.StandardDialog android:tag="layout/dialog_kinmarketplace_daily_reward_error_0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:subtitleText="@string/daily_kin_reward_error_description" app:titleText="@string/daily_kin_reward_error_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kik.design.BorderlessButton android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_cancel" />
    <com.kik.design.BorderlessButton android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_retry" />
</com.kik.design.StandardDialog>