<?xml version="1.0" encoding="utf-8"?>
<com.kik.design.StandardDialog android:layout_gravity="center" android:tag="layout/dialog_home_leavegroup_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="300.0dip" app:subtitleText="@string/leave_chat_dialog_body" app:titleText="@string/leave_chat_dialog_title"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kik.design.StandardDialogButton android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_cancel" />
    <com.kik.design.StandardDialogButton android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_leave" />
</com.kik.design.StandardDialog>