<?xml version="1.0" encoding="utf-8"?>
<com.kik.design.StandardDialog android:orientation="vertical" android:tag="layout/dialog_temporary_ban_0" android:paddingLeft="32.0dip" android:paddingTop="24.0dip" android:paddingRight="32.0dip" android:paddingBottom="24.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kik.design.SimpleTextView android:layout_gravity="center" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" app:textColor="?gray_6" app:textSize="16.0sp" />
    <com.kik.design.LargeCountdownTimerView android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:dayAbbreviation="@string/day_abbreviation" app:hourAbbreviation="@string/hour_abbreviation" app:minuteAbbreviation="@string/minute_abbreviation" app:secondAbbreviation="@string/second_abbreviation" app:textColor="?gray_6" />
    <com.kik.design.PrimaryButton android:gravity="center_horizontal" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="2.0dip" android:text="@string/close_kik" />
    <com.kik.design.PrimaryButton android:gravity="center_horizontal" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="2.0dip" android:text="@string/button_ok" />
    <com.kik.design.PrimaryButton android:gravity="center_horizontal" android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="2.0dip" android:text="@string/button_ok" />
</com.kik.design.StandardDialog>