<?xml version="1.0" encoding="utf-8"?>
<com.kik.design.StandardDialog android:layout_gravity="center" android:tag="layout/dialog_youraccount_yourkikusername_0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:titleText="@string/title_kik_username"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_copy" style="@style/DialogAction" />
        <Button android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_share_username" style="@style/DialogAction" />
    </LinearLayout>
</com.kik.design.StandardDialog>