<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/screen_changegroupname_0" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kik.design.Titlebar android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:title="@string/change_group_name_title">
        <com.kik.design.BorderlessButton android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/save" />
    </com.kik.design.Titlebar>
    <com.kik.design.StandardEditText android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/change_group_name_hint" android:inputType="textCapSentences" app:neutralText=" " style="@style/StandardEditText" />
</LinearLayout>