<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/dialog_restore_general_error_0" android:background="@android:color/background_light" android:padding="20.0dip" android:fitsSystemWindows="true" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:ellipsize="end" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/errortitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/something_went_wrong" android:singleLine="true" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
    <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/errortext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/error_failed_to_restore_kin_wallet" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />
    <com.kik.design.BorderlessButton android:layout_gravity="center_horizontal" android:id="@id/ok" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_ok" />
</LinearLayout>